--- a/src/RestAPI/Sample.RestApi/appsettings.json
+++ b/src/RestAPI/Sample.RestApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Sample;user id=sa;password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=Medis-Sample;user id=sa;password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
