worked on dbset config

--- a/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
+++ b/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Autofac" Version="8.2.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
@@ -18,5 +19,7 @@
     <ProjectReference Include="..\..\Application\Sample.Application\Sample.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Sample.Persistence.EF\Sample.Persistence.EF.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
