--- a/src/RestAPI/Sample.RestApi/appsettings.json
+++ b/src/RestAPI/Sample.RestApi/appsettings.json
@@ -1,8 +1,8 @@
 {
 
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Medis-Sample;user id=sa;password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
-  },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=.;Database=Medis-Sample;user id=sa;password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
+  //},
 
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Authentication": {
+    "issuer": "https://mac.medis.land",
+    "audience": "6fa644b4-764d-4d69-b3f7-da131e5c91e1"
+  }
+
 }
