--- a/src/Application/Sample.Application/Sample.Application.csproj
+++ b/src/Application/Sample.Application/Sample.Application.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\..\Core\Sample.Core\Sample.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
+  </ItemGroup>
+
 </Project>
