--- a/src/Infrastructure/Sample.Persistence.EF/infrastructureAppsettings.json
+++ b/src/Infrastructure/Sample.Persistence.EF/infrastructureAppsettings.json
@@ -2,8 +2,8 @@
   "DatabaseType": "SqlServerDevelopment",
 
   "ConnectionStrings": {
-    //"SqlServerDevelopment": "Server=.;Database=Medis-Sample;User Id=sa;Password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
-   "SqlServerDevelopment": "Server=.;Database=Medis-Sample-Test;User Id=sa;Password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
+    "SqlServerDevelopment": "Server=.;Database=Medis-Sample;User Id=sa;Password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
+   //"SqlServerDevelopment": "Server=.;Database=Medis-Sample-Test;User Id=sa;Password=123@medis;Integrated Security=False;Encrypt=True;TrustServerCertificate=True;"
   },
 
   "Logging": {
