--- a/test/Sample.Test.Tools/Sample.Test.Tools.csproj
+++ b/test/Sample.Test.Tools/Sample.Test.Tools.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
