[work] change media service implemention

--- a/test/Sample.Application.Test.Unit/Sample.Application.Test.Unit.csproj
+++ b/test/Sample.Application.Test.Unit/Sample.Application.Test.Unit.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\RestAPI\Sample.RestApi\Sample.RestApi.csproj" />
     <ProjectReference Include="..\Sample.Test.Tools\Sample.Test.Tools.csproj" />
   </ItemGroup>
 
