--- a/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
+++ b/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Application\Sample.Application\Sample.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Sample.Persistence.EF\Sample.Persistence.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
