--- a/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
+++ b/src/RestAPI/Sample.RestApi/Sample.RestApi.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Media\Images\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
